# termwright

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package-lock.json
.github/workflows/: release.yml
examples/: test_vim.rs
skills/termwright-tui-testing/: SKILL.md
skills/termwright-tui-testing-focused/: SKILL.md
skills/testing-tui-apps/: SKILL.md
skills/testing-tui-apps/references/: protocol-reference.md  testing-examples.md
src/: error.rs  lib.rs  main.rs  prelude.rs  runner.rs  steps.rs  terminal.rs
src/daemon/: client.rs  mod.rs  protocol.rs  server.rs
src/info/: capabilities.rs  keys.rs  mod.rs  protocols.rs  steps.rs
src/input/: keys.rs  mod.rs  mouse.rs
src/output/: colors.rs  image.rs  mod.rs
src/screen/: mod.rs
src/terminal/: csi.rs  osc.rs
src/wait/: mod.rs
tests/: daemon.rs
