[package]
name = "termwright"
version = "0.2.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "Playwright-like automation framework for terminal TUI applications"
repository = "https://github.com/fcoury/termwright"
keywords = ["terminal", "tui", "automation", "testing", "pty"]
categories = ["development-tools::testing", "command-line-interface"]

[dependencies]
# PTY management
portable-pty = "0.8"

# Terminal emulation
vt100 = "0.15"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "io-util", "net", "macros"] }

# Error handling
thiserror = "2"

# Pattern matching
regex = "1"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["clock"] }


# CLI
clap = { version = "4", features = ["derive"] }

# Image rendering
ab_glyph = "0.2"
font-kit = "0.14"
image = "0.25"
imageproc = "0.25"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
